# openclaw_discord_voice_assistant

./: .env.example  .gitignore  AGENT_INSTALL.md  AGENT_PROACTIVE_VOICE.md  DAVE_PROTOCOL.md  Dockerfile  HUMAN_INSTALL.md  PROACTIVE_VOICE_SETUP.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  unraid-template.xml
.github/workflows/: docker-publish.yml
clippy/: __init__.py  bot.py  main.py  voice_manager.py  voice_session.py
clippy/audio/: sink.py  stt.py  tts.py  wake_word.py
clippy/commands/: general.py  voice.py
clippy/integrations/: openclaw.py
discord_voice_assistant/: __init__.py  auth_store.py  bot.py  config.py  main.py  voice_bridge.py  voice_manager.py  voice_session.py
discord_voice_assistant/audio/: __init__.py  sink.py  stt.py  tts.py  voice_id.py  voicemail.py  wake_word.py
discord_voice_assistant/commands/: __init__.py  admin.py  general.py  voice.py  voice_config.py
discord_voice_assistant/integrations/: __init__.py  openclaw.py  webhook_server.py
docs/: DAVE_COMPATIBILITY_RESEARCH.md  thinking-sound-tuner.html
scripts/: install.sh
tools/: thinking-sound-tuner.html
voice_bridge/: Dockerfile  package.json
voice_bridge/src/: index.js
