[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-discord-voice-assistant"
version = "0.1.0"
description = "Discord voice assistant that bridges OpenClaw AI with Discord voice channels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "py-cord[voice]>=2.6.0",
    "faster-whisper>=1.0.0",
    "openwakeword>=0.6.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "piper-tts>=1.2.0; platform_machine != 'aarch64'",
    "pydub>=0.25.1",
    "resemblyzer>=0.1.3",
    "scipy>=1.11.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=1.0.0"]
cuda = ["faster-whisper[cuda]>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black>=23.0", "ruff>=0.1.0"]

[project.scripts]
discord-voice-assistant = "discord_voice_assistant.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["discord_voice_assistant*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
